@@ -1,4 +1,4 @@
 name: drupal
 long_name: Drupal Scans
-autopwn_version: 0.16.0
-description: Run cmsmap Drupal scans against target.
+autopwn_version: 0.17.0
+description: Run CMSmap Drupal scans against target.
