@@ -1,4 +1,4 @@
 name: nmap-common-ports
 long_name: Nmap Scan (Common TCP Ports)
-autopwn_version: 0.16.0
+autopwn_version: 0.17.0
 description: Run nmap scanner against common TCP ports of target.
