@@ -1,4 +1,4 @@
 name: udp-scan
 long_name: UDP Scanning
-autopwn_version: 0.16.0
+autopwn_version: 0.17.0
 description: Run UDP scans against target.
