@@ -1,1 +1,1 @@
-{parallel: true, scripts_directory: /root/scripts/, update: true, update_check: true}
+{parallel: false, scripts_directory: /root/scripts/, update: true, update_check: true}
