@@ -3,7 +3,7 @@ binary_name: nbtscan
 url: http://www.unixwiz.net/tools/nbtscan.html
 description: NBTScan is a program for scanning IP networks for NetBIOS name information (similar to what the Windows nbtstat tool provides against single hosts).
 autopwn_version: 0.17.0
-assessment_groups: ['infrastructure']
+assessment_groups: ['infrastructure', 'windows-audit']
 
 rules:
     target-parameter-exists: ['target_name', 'target']
