@@ -3,7 +3,7 @@ binary_name: udp-proto-scanner.pl
 url: https://labs.portcullis.co.uk/tools/udp-proto-scanner/
 description: udp-proto-scanner is a perl script which discovers UDP services by sending triggers to a list of hosts.
 autopwn_version: 0.17.0
-assessment_groups: ['infrastructure']
+assessment_groups: ['infrastructure', 'udp-scan']
 
 rules:
     target-parameter-exists: ['target_name', 'target']
