@@ -1,3 +1,8 @@
+autopwn v0.17.0 - 20150601
+
+* autopwn shell (similar to msfconsole)
+* Code rewrite (slightly cleaner now)
+
 autopwn v0.16.0 - 20150426
 
 * Documentation work
